Avoid blog quotes to overlap with the poster's photo

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -1753,7 +1753,7 @@ table#staffprofile-content td a:hover {
 .quotedreplytext {
   background-color: silver;
   border: 1px solid gray;
-  margin-left: 4em;
+  margin-left: 8.5em;
   padding: 2em;
 }
 
